# monte-carlo-web

./: LICENSE.md  index.html  main.mjs  package-lock.json  package.json  sample.mci  template.mci  test2.mci
chartjs/: chart.js  chartjs-plugin-zoom.min.js  crosshair.js  pallete.mjs
css/: style.css
rust/: Cargo.toml  README.md
rust/pkg/: MonteCarloRS.js  MonteCarloRS_bg.wasm
rust/src/: Go.rs  PhotonPacket.rs  RunConfig.rs  lib.rs
src/: MonteCarlo.mjs  MonteCarloConfig.mjs  SimulationRunner.mjs  SimulationWorker.mjs  Utils.mjs  Vec3d.mjs  WorkerMessageHander.mjs  grammar.mjs
src/mcml/: Go.mjs  OutputCalc.mjs  OutputWriter.mjs  PhotonPacket.mjs  Twister.mjs
