[package]
name = "MonteCarloRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
rand_mt = "4.2.2"
wasm-bindgen = "0.2.87"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']